rerun for 2020 to 2025

--- a/config/zones/ES.yaml
+++ b/config/zones/ES.yaml
@@ -236,10 +236,10 @@ delays:
 emissionFactors:
   direct:
     battery discharge:
-      - _comment: used non-null storage values
+      - _comment: used storage values greater than zero.
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average
-        value: 104.29
+        value: 94.75
     biomass:
       datetime: '2021-01-01'
       source: BEIS 2021
@@ -274,15 +274,15 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2020-01-01'
         source: Electricity Maps, 2020 zone average
-        value: 130.34
+        value: 127.8
       - _comment: used storage values greater than zero.
         datetime: '2021-01-01'
         source: Electricity Maps, 2021 zone average
-        value: 118.86
+        value: 114.03
       - _comment: used storage values greater than zero.
         datetime: '2022-01-01'
         source: Electricity Maps, 2022 zone average
-        value: 164.11
+        value: 161.38
       - _comment: used storage values greater than zero.
         datetime: '2023-01-01'
         source: Electricity Maps, 2023 zone average
@@ -294,7 +294,7 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average
-        value: 66.47
+        value: 66.6
     oil:
       - datetime: '2021-01-01'
         source: EU-ETS, ENTSO-E 2021
@@ -310,10 +310,10 @@ emissionFactors:
         value: 857.84
   lifecycle:
     battery discharge:
-      - _comment: used non-null storage values
+      - _comment: used storage values greater than zero.
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average; National Laboratory of the Rockies
-        value: 137.29
+        value: 127.75
     biomass:
       datetime: '2014-01-01'
       source: BEIS 2021; IPCC 2014
@@ -354,15 +354,15 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2020-01-01'
         source: Electricity Maps, 2020 zone average; UNECE 2022
-        value: 141.04
+        value: 138.5
       - _comment: used storage values greater than zero.
         datetime: '2021-01-01'
         source: Electricity Maps, 2021 zone average; UNECE 2022
-        value: 129.56
+        value: 124.73
       - _comment: used storage values greater than zero.
         datetime: '2022-01-01'
         source: Electricity Maps, 2022 zone average; UNECE 2022
-        value: 174.81
+        value: 172.08
       - _comment: used storage values greater than zero.
         datetime: '2023-01-01'
         source: Electricity Maps, 2023 zone average; UNECE 2022
@@ -374,7 +374,7 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average; UNECE 2022
-        value: 77.17
+        value: 77.3
     nuclear:
       datetime: '2020-01-01'
       source: UNECE 2022
@@ -558,37 +558,37 @@ hide_day_ahead_price: false
 isLowCarbon:
   battery discharge:
     - datetime: '2025-01-01'
-      value: 0.7534
+      value: 0.7723
   hydro discharge:
     - datetime: '2020-01-01'
-      value: 0.7189
+      value: 0.7211
     - datetime: '2021-01-01'
-      value: 0.7475
+      value: 0.7519
     - datetime: '2022-01-01'
-      value: 0.6783
+      value: 0.6802
     - datetime: '2023-01-01'
       value: 0.8129
     - datetime: '2024-01-01'
       value: 0.8709
     - datetime: '2025-01-01'
-      value: 0.8536
+      value: 0.8533
 isRenewable:
   battery discharge:
     - datetime: '2025-01-01'
-      value: 0.5297
+      value: 0.5509
   hydro discharge:
     - datetime: '2020-01-01'
-      value: 0.4654
+      value: 0.4667
     - datetime: '2021-01-01'
-      value: 0.5063
+      value: 0.5088
     - datetime: '2022-01-01'
-      value: 0.4599
+      value: 0.461
     - datetime: '2023-01-01'
       value: 0.5891
     - datetime: '2024-01-01'
-      value: 0.6583
+      value: 0.6584
     - datetime: '2025-01-01'
-      value: 0.6597
+      value: 0.6595
 parsers:
   consumption: ENTSOE.fetch_consumption
   consumptionForecast: ENTSOE.fetch_consumption_forecast
