--- a/config/zones/BA.yaml
+++ b/config/zones/BA.yaml
@@ -65,10 +65,10 @@ delays:
 emissionFactors:
   direct:
     hydro discharge:
-      - _comment: used default IPCC 2014 value of 0.0
+      - _comment: used storage values greater than zero.
         datetime: '2021-01-01'
         source: Electricity Maps, 2021 zone average
-        value: 0.0
+        value: 556.44
       - _comment: used default IPCC 2014 value of 0.0
         datetime: '2022-01-01'
         source: Electricity Maps, 2022 zone average
@@ -76,25 +76,25 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2023-01-01'
         source: Electricity Maps, 2023 zone average
-        value: 606.56
+        value: 596.88
       - _comment: used storage values greater than zero.
         datetime: '2024-01-01'
         source: Electricity Maps, 2024 zone average
-        value: 421.24
+        value: 453.28
       - _comment: used storage values greater than zero.
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average
-        value: 481.19
+        value: 422.64
   lifecycle:
     hydro:
       datetime: '2020-01-01'
       source: UNECE 2022
       value: 10.7
     hydro discharge:
-      - _comment: used default IPCC 2014 value of 24.0
+      - _comment: used storage values greater than zero.
         datetime: '2021-01-01'
         source: Electricity Maps, 2021 zone average; UNECE 2022
-        value: 10.7
+        value: 567.14
       - _comment: used default IPCC 2014 value of 24.0
         datetime: '2022-01-01'
         source: Electricity Maps, 2022 zone average; UNECE 2022
@@ -102,15 +102,15 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2023-01-01'
         source: Electricity Maps, 2023 zone average; UNECE 2022
-        value: 617.26
+        value: 607.58
       - _comment: used storage values greater than zero.
         datetime: '2024-01-01'
         source: Electricity Maps, 2024 zone average; UNECE 2022
-        value: 431.94
+        value: 463.98
       - _comment: used storage values greater than zero.
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average; UNECE 2022
-        value: 491.89
+        value: 433.34
     nuclear:
       datetime: '2020-01-01'
       source: UNECE 2022
@@ -246,27 +246,27 @@ hide_day_ahead_price: false
 isLowCarbon:
   hydro discharge:
     - datetime: '2021-01-01'
-      value: 1.0
+      value: 0.2599
     - datetime: '2022-01-01'
       value: 1.0
     - datetime: '2023-01-01'
-      value: 0.1965
+      value: 0.2086
     - datetime: '2024-01-01'
-      value: 0.4248
+      value: 0.3879
     - datetime: '2025-01-01'
-      value: 0.3669
+      value: 0.4357
 isRenewable:
   hydro discharge:
     - datetime: '2021-01-01'
-      value: 1.0
+      value: 0.2476
     - datetime: '2022-01-01'
       value: 1.0
     - datetime: '2023-01-01'
-      value: 0.1838
+      value: 0.1948
     - datetime: '2024-01-01'
-      value: 0.3718
+      value: 0.3443
     - datetime: '2025-01-01'
-      value: 0.3669
+      value: 0.4224
 parsers:
   consumption: ENTSOE.fetch_consumption
   consumptionForecast: ENTSOE.fetch_consumption_forecast
