--- a/config/zones/JP-HR.yaml
+++ b/config/zones/JP-HR.yaml
@@ -35,6 +35,10 @@ emissionFactors:
         source: Electricity Maps, 2020 zone average
         value: 0.0
       - _comment: used default IPCC 2014 value of 0.0
+        datetime: '2021-01-01'
+        source: Electricity Maps, 2021 zone average
+        value: 0.0
+      - _comment: used default IPCC 2014 value of 0.0
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average
         value: 0.0
@@ -43,6 +47,10 @@ emissionFactors:
       - _comment: used default IPCC 2014 value of 24.0
         datetime: '2020-01-01'
         source: Electricity Maps, 2020 zone average; IPCC 2014
+        value: 24.0
+      - _comment: used default IPCC 2014 value of 24.0
+        datetime: '2021-01-01'
+        source: Electricity Maps, 2021 zone average; IPCC 2014
         value: 24.0
       - _comment: used default IPCC 2014 value of 24.0
         datetime: '2025-01-01'
@@ -161,11 +169,15 @@ isLowCarbon:
   hydro discharge:
     - datetime: '2020-01-01'
       value: 1.0
+    - datetime: '2021-01-01'
+      value: 1.0
     - datetime: '2025-01-01'
       value: 1.0
 isRenewable:
   hydro discharge:
     - datetime: '2020-01-01'
+      value: 1.0
+    - datetime: '2021-01-01'
       value: 1.0
     - datetime: '2025-01-01'
       value: 1.0
