--- a/config/zones/JP-KN.yaml
+++ b/config/zones/JP-KN.yaml
@@ -26,10 +26,10 @@ delays:
 emissionFactors:
   direct:
     hydro discharge:
-      - _comment: used default IPCC 2014 value of 0.0
+      - _comment: used storage values greater than zero.
         datetime: '2020-01-01'
         source: Electricity Maps, 2020 zone average
-        value: 0.0
+        value: 373.6
       - _comment: used default IPCC 2014 value of 0.0
         datetime: '2021-01-01'
         source: Electricity Maps, 2021 zone average
@@ -40,10 +40,10 @@ emissionFactors:
         value: 0.0
   lifecycle:
     hydro discharge:
-      - _comment: used default IPCC 2014 value of 24.0
+      - _comment: used storage values greater than zero.
         datetime: '2020-01-01'
         source: Electricity Maps, 2020 zone average; IPCC 2014
-        value: 24.0
+        value: 397.6
       - _comment: used default IPCC 2014 value of 24.0
         datetime: '2021-01-01'
         source: Electricity Maps, 2021 zone average; IPCC 2014
@@ -194,7 +194,7 @@ hide_day_ahead_price: false
 isLowCarbon:
   hydro discharge:
     - datetime: '2020-01-01'
-      value: 1.0
+      value: 0.3069
     - datetime: '2021-01-01'
       value: 1.0
     - datetime: '2023-01-01'
@@ -202,7 +202,7 @@ isLowCarbon:
 isRenewable:
   hydro discharge:
     - datetime: '2020-01-01'
-      value: 1.0
+      value: 0.2433
     - datetime: '2021-01-01'
       value: 1.0
     - datetime: '2023-01-01'
