--- a/config/zones/JP.yaml
+++ b/config/zones/JP.yaml
@@ -30,10 +30,10 @@ currency: JPY
 emissionFactors:
   direct:
     hydro discharge:
-      - _comment: used default IPCC 2014 value of 0.0
+      - _comment: used storage values greater than zero.
         datetime: '2020-01-01'
         source: Electricity Maps, 2020 zone average
-        value: 0.0
+        value: 354.18
       - _comment: used default IPCC 2014 value of 0.0
         datetime: '2021-01-01'
         source: Electricity Maps, 2021 zone average
@@ -48,10 +48,10 @@ emissionFactors:
         value: 0.0
   lifecycle:
     hydro discharge:
-      - _comment: used default IPCC 2014 value of 24.0
+      - _comment: used storage values greater than zero.
         datetime: '2020-01-01'
         source: Electricity Maps, 2020 zone average; IPCC 2014
-        value: 24.0
+        value: 378.18
       - _comment: used default IPCC 2014 value of 24.0
         datetime: '2021-01-01'
         source: Electricity Maps, 2021 zone average; IPCC 2014
@@ -191,7 +191,7 @@ hide_day_ahead_price: false
 isLowCarbon:
   hydro discharge:
     - datetime: '2020-01-01'
-      value: 1.0
+      value: 0.3458
     - datetime: '2021-01-01'
       value: 1.0
     - datetime: '2023-01-01'
@@ -201,7 +201,7 @@ isLowCarbon:
 isRenewable:
   hydro discharge:
     - datetime: '2020-01-01'
-      value: 1.0
+      value: 0.2874
     - datetime: '2021-01-01'
       value: 1.0
     - datetime: '2023-01-01'
