--- a/config/zones/US-CAL-IID.yaml
+++ b/config/zones/US-CAL-IID.yaml
@@ -145,9 +145,13 @@ emissionFactors:
   direct:
     battery discharge:
       - _comment: used storage values greater than zero.
+        datetime: '2022-01-01'
+        source: Electricity Maps, 2022 zone average
+        value: 206.01
+      - _comment: used storage values greater than zero.
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average
-        value: 99.06
+        value: 98.96
     biomass:
       - datetime: '2020-01-01'
         source: BEIS 2021
@@ -212,7 +216,7 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average
-        value: 86.59
+        value: 62.51
     oil:
       - _comment: Mean of all US zones
         datetime: '2020-01-01'
@@ -233,9 +237,13 @@ emissionFactors:
   lifecycle:
     battery discharge:
       - _comment: used storage values greater than zero.
+        datetime: '2022-01-01'
+        source: Electricity Maps, 2022 zone average; National Laboratory of the Rockies
+        value: 239.01
+      - _comment: used storage values greater than zero.
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average; National Laboratory of the Rockies
-        value: 132.06
+        value: 131.96
     biomass:
       - _comment: Mean of all US zones
         datetime: '2020-01-01'
@@ -304,7 +312,7 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average; IPCC 2014
-        value: 110.59
+        value: 86.51
     oil:
       - _comment: Mean of all US zones
         datetime: '2020-01-01'
@@ -482,22 +490,26 @@ has_day_ahead_price_license: false
 hide_day_ahead_price: false
 isLowCarbon:
   battery discharge:
+    - datetime: '2022-01-01'
+      value: 0.6587
     - datetime: '2025-01-01'
-      value: 0.8279
+      value: 0.8282
   hydro discharge:
     - datetime: '2024-01-01'
       value: 0.486
     - datetime: '2025-01-01'
-      value: 0.9414
+      value: 0.9568
 isRenewable:
   battery discharge:
+    - datetime: '2022-01-01'
+      value: 0.6587
     - datetime: '2025-01-01'
-      value: 0.8252
+      value: 0.8255
   hydro discharge:
     - datetime: '2024-01-01'
       value: 0.486
     - datetime: '2025-01-01'
-      value: 0.9378
+      value: 0.9452
 parsers:
   consumption: EIA.fetch_consumption
   consumptionForecast: EIA.fetch_consumption_forecast
