--- a/config/zones/US-NW-NEVP.yaml
+++ b/config/zones/US-NW-NEVP.yaml
@@ -269,6 +269,15 @@ delays:
   production: 48
 emissionFactors:
   direct:
+    battery discharge:
+      - _comment: used non-null storage values
+        datetime: '2024-01-01'
+        source: Electricity Maps, 2024 zone average
+        value: 368.88
+      - _comment: used non-null storage values
+        datetime: '2025-01-01'
+        source: Electricity Maps, 2025 zone average
+        value: 409.65
     biomass:
       - datetime: '2020-01-01'
         source: BEIS 2021
@@ -344,6 +353,15 @@ emissionFactors:
         source: eGrid 2023
         value: 757.3688858307635
   lifecycle:
+    battery discharge:
+      - _comment: used non-null storage values
+        datetime: '2024-01-01'
+        source: Electricity Maps, 2024 zone average; National Laboratory of the Rockies
+        value: 401.88
+      - _comment: used non-null storage values
+        datetime: '2025-01-01'
+        source: Electricity Maps, 2025 zone average; National Laboratory of the Rockies
+        value: 442.65
     biomass:
       - _comment: Mean of all US zones
         datetime: '2020-01-01'
@@ -566,10 +584,20 @@ fallbackZoneMixes:
 has_day_ahead_price_license: false
 hide_day_ahead_price: false
 isLowCarbon:
+  battery discharge:
+    - datetime: '2024-01-01'
+      value: 0.3196
+    - datetime: '2025-01-01'
+      value: 0.201
   hydro discharge:
     - datetime: '2022-01-01'
       value: 1.0
 isRenewable:
+  battery discharge:
+    - datetime: '2024-01-01'
+      value: 0.2996
+    - datetime: '2025-01-01'
+      value: 0.1879
   hydro discharge:
     - datetime: '2022-01-01'
       value: 1.0
