--- a/config/zones/US-SW-SRP.yaml
+++ b/config/zones/US-SW-SRP.yaml
@@ -169,17 +169,21 @@ emissionFactors:
   direct:
     battery discharge:
       - _comment: used storage values greater than zero.
+        datetime: '2022-01-01'
+        source: Electricity Maps, 2022 zone average
+        value: 184.26
+      - _comment: used storage values greater than zero.
         datetime: '2023-01-01'
         source: Electricity Maps, 2023 zone average
         value: 250.01
       - _comment: used storage values greater than zero.
         datetime: '2024-01-01'
         source: Electricity Maps, 2024 zone average
-        value: 242.56
+        value: 284.05
       - _comment: used storage values greater than zero.
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average
-        value: 241.86
+        value: 243.17
     biomass:
       - datetime: '2020-01-01'
         source: BEIS 2021
@@ -244,23 +248,23 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2021-01-01'
         source: Electricity Maps, 2021 zone average
-        value: 214.07
+        value: 214.36
       - _comment: used storage values greater than zero.
         datetime: '2022-01-01'
         source: Electricity Maps, 2022 zone average
-        value: 206.8
+        value: 205.58
       - _comment: used storage values greater than zero.
         datetime: '2023-01-01'
         source: Electricity Maps, 2023 zone average
-        value: 267.21
+        value: 262.97
       - _comment: used storage values greater than zero.
         datetime: '2024-01-01'
         source: Electricity Maps, 2024 zone average
-        value: 235.1
+        value: 240.66
       - _comment: used storage values greater than zero.
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average
-        value: 243.92
+        value: 240.2
     oil:
       - _comment: Mean of all US zones
         datetime: '2020-01-01'
@@ -281,17 +285,21 @@ emissionFactors:
   lifecycle:
     battery discharge:
       - _comment: used storage values greater than zero.
+        datetime: '2022-01-01'
+        source: Electricity Maps, 2022 zone average; National Laboratory of the Rockies
+        value: 217.26
+      - _comment: used storage values greater than zero.
         datetime: '2023-01-01'
         source: Electricity Maps, 2023 zone average; National Laboratory of the Rockies
         value: 283.01
       - _comment: used storage values greater than zero.
         datetime: '2024-01-01'
         source: Electricity Maps, 2024 zone average; National Laboratory of the Rockies
-        value: 275.56
+        value: 317.05
       - _comment: used storage values greater than zero.
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average; National Laboratory of the Rockies
-        value: 274.86
+        value: 276.17
     biomass:
       - _comment: Mean of all US zones
         datetime: '2020-01-01'
@@ -360,23 +368,23 @@ emissionFactors:
       - _comment: used storage values greater than zero.
         datetime: '2021-01-01'
         source: Electricity Maps, 2021 zone average; IPCC 2014
-        value: 238.07
+        value: 238.36
       - _comment: used storage values greater than zero.
         datetime: '2022-01-01'
         source: Electricity Maps, 2022 zone average; IPCC 2014
-        value: 230.8
+        value: 229.58
       - _comment: used storage values greater than zero.
         datetime: '2023-01-01'
         source: Electricity Maps, 2023 zone average; IPCC 2014
-        value: 291.21
+        value: 286.97
       - _comment: used storage values greater than zero.
         datetime: '2024-01-01'
         source: Electricity Maps, 2024 zone average; IPCC 2014
-        value: 259.1
+        value: 264.66
       - _comment: used storage values greater than zero.
         datetime: '2025-01-01'
         source: Electricity Maps, 2025 zone average; IPCC 2014
-        value: 267.92
+        value: 264.2
     oil:
       - _comment: Mean of all US zones
         datetime: '2020-01-01'
@@ -539,46 +547,50 @@ has_day_ahead_price_license: false
 hide_day_ahead_price: false
 isLowCarbon:
   battery discharge:
+    - datetime: '2022-01-01'
+      value: 0.6476
     - datetime: '2023-01-01'
       value: 0.5527
     - datetime: '2024-01-01'
-      value: 0.5969
+      value: 0.5374
     - datetime: '2025-01-01'
-      value: 0.5503
+      value: 0.5469
   hydro discharge:
     - datetime: '2020-01-01'
       value: 0.4802
     - datetime: '2021-01-01'
-      value: 0.5684
+      value: 0.5686
     - datetime: '2022-01-01'
-      value: 0.5921
+      value: 0.5954
     - datetime: '2023-01-01'
-      value: 0.5137
+      value: 0.5272
     - datetime: '2024-01-01'
-      value: 0.592
+      value: 0.5775
     - datetime: '2025-01-01'
-      value: 0.5891
+      value: 0.5884
 isRenewable:
   battery discharge:
+    - datetime: '2022-01-01'
+      value: 0.0356
     - datetime: '2023-01-01'
       value: 0.0565
     - datetime: '2024-01-01'
-      value: 0.0762
+      value: 0.0366
     - datetime: '2025-01-01'
-      value: 0.0958
+      value: 0.0964
   hydro discharge:
     - datetime: '2020-01-01'
       value: 0.035
     - datetime: '2021-01-01'
-      value: 0.0334
+      value: 0.0336
     - datetime: '2022-01-01'
-      value: 0.0443
+      value: 0.0437
     - datetime: '2023-01-01'
-      value: 0.0405
+      value: 0.0376
     - datetime: '2024-01-01'
-      value: 0.0698
+      value: 0.0603
     - datetime: '2025-01-01'
-      value: 0.0733
+      value: 0.0912
 parsers:
   consumption: EIA.fetch_consumption
   consumptionForecast: EIA.fetch_consumption_forecast
